# cpp20_template

./: .ycm_extra_conf.py  CMakeLists.txt  cheet_sheet.txt  readme
script/: cp_template.sh  get_cpm.sh
template/: CMakeLists.txt
template/include/: hello.hpp
template/source/: hello_main.cpp
template/test/source/: test_hello.cpp
test/source/: test_hello.cpp
